--- a/Contactme.html
+++ b/Contactme.html
@@ -9,7 +9,7 @@
 <body>
   <ol>
     <li>Phone no.-9113505707</li>
-    <li>Email id-<a>href="mailto:prashanthakumar00@gmail.com">prashanthakumar00@gmail.com</a></li>
+    <li>Email id-prashanthakumar00@gmail.com</li>
     <hr>
     <form action="mailto:prashanthakumar00@gmail.com" method="post" enctype="text/plain">
       <label>Your name:</label>
